# ansari-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  af-config.json  ansari-slack.py  ansari_db.py  api_client.py  api_presenter.py  api_v2_exercise.py  app.py  block_css.css  chat_log.py  config.py  constants.py  discord_presenter.py  main.py  main_ab_testing.py  main_api.py  main_discord.py  main_env.py  main_file.py  main_fns.py  main_gradio.py  main_langchain.py  main_stdio.py  main_whatsapp.py  migrate_database.py  pr-description.md  pyproject.toml  pytest.ini  quran_search.py  requirements-dev.in  requirements-dev.txt  (+8 more)
.github/workflows/: deploy-production.yml  deploy-staging.yml  python-app.yml
ab_testing_utils/: 01_create_tables.sql  experiment_management.ipynb
agents/: ansari.py  ansari_fn.py  ansari_langchain.py  ansari_workflow.py  query_extractor.py  quran_decider.py  quran_filter.py
analysis/: README.md
analysis/reports/: ANSARI_FINAL_REPORT_CONSOLIDATED.md  FINAL_CONSOLIDATED_REPORT.md  MASTER_COMPREHENSIVE_ANALYSIS_REPORT.md  README.md  analysis_completion_summary.md  analysis_final_corrected_summary.md  complete_analysis.md  quran_subcategories.md  readme.md  v2_methodology.md
analysis/scripts/: analyze_quran_500.py  analyze_quran_clusters.py  analyze_quran_clusters_multisize.py  check_missing_threads.py  comprehensive_analysis_summary.py  extract_category_examples.py  extract_pii_examples.py  extract_quran_no_pii.py  monitor_loop.py  monitor_v2_progress.py  pii_histogram.py  pii_histogram_text.py  reclassify_categories.py  reclassify_quran_sample.py  reclassify_quran_top7.py
aws/: aws-cli.md  github-actions-policy.json  instance-role-parameters-access.json  instance-role-policy.json  service-role-policy.json
codev/consult-types/: impl-review.md  integration-review.md  plan-review.md  pr-ready.md  spec-review.md
codev/protocols/: protocol-schema.json
codev/resources/: workflow-reference.md
codev/roles/: architect.md  builder.md  consultant.md
codev/templates/: AGENTS.md  CLAUDE.md  arch.md  cheatsheet.md  lessons-learned.md  lifecycle.md  pr-overview.md  projectlist-archive.md  projectlist.md
data/mawsuah/: README.md  strip_tashkeel.py
data/tafsir/: README.md  fetch_tafsir.py  index-docs-with-vectara.ipynb
diskcache_dir/000/: cache.db-shm  cache.db-wal
diskcache_dir/001/: cache.db  cache.db-shm  cache.db-wal
diskcache_dir/002/: cache.db-shm  cache.db-wal
diskcache_dir/003/: cache.db-shm  cache.db-wal
docs/: guide.md  index.md  thread_format.md
docs/fastapi/: async_await_backgroundtasks_visualized.md  async_performance_optimization_strategies.md  inheriting_middleware_class.ipynb  middleware_chains_and_request_response_flow.ipynb  sync_vs_async_fastapi_endpoints.md
docs/impl/: mongodb.md
docs/spec/: mongodb.md
docs/structure_of_api_responses/: a_fastapi_request_received_from_zrok.json  ansari_website_api_structure_of_a_request_sent_using_zrok.json  anthropic_api_structure_of_message_history.json  anthropic_api_structure_of_response.json  meta_whatsapp_api_structure_of_a_reply_msg_status.json  meta_whatsapp_api_structure_of_a_request_sent_using_zrok.json  meta_whatsapp_api_structure_of_a_user_incoming_msg.json  meta_whatsapp_structure_of_a_user_incoming_msg.json  openai_api_structure_of_chat_completion_chunk_object.ipynb
evals/batik/: batik-v1.csv  generate-answers.ipynb
evals/ramadan/: questions_answers_eval.csv
ingest/: ingest-quran.ipynb
presenters/: api_presenter.py  discord_presenter.py  file_presenter.py  gradio_presenter.py  stdio_presenter.py  whatsapp_presenter.py
prompts/: greeting.txt  news.txt  system_msg.txt
resources/prompts/: about_the_quran.txt  ansari_expanded_query.txt  extract_query_from_question.txt  filter_relevant_verses.txt  greeting.txt  quran_result.txt  system_msg.txt  system_msg_fn.txt  system_msg_fn_v1.txt  system_msg_tool.txt
resources/structure_of_api_responses/: meta_whatsapp_api_structure_of_a_reply_msg_status.json
resources/templates/: ask_question.txt  password_reset.html
sql/: 00_create_schema.sql  01_create_tables.sql  02_create_user_tokens.sql  03_create_reset_tokens.sql  04_create_feedback_table.sql  05_create_share_table.sql  06_alter_user_tokens.sql  06_create_refresh_tokens.sql  07_create_refresh_tokens.sql  08_alter_chat_id_to_uuid.sql  08_update_guest_users.sql  09_create_quran_answer_tables.sql  10_create_whatsapp_tables.sql  10_update_guest_users.sql  11_alter_tool_logic.sql  12_alter_user_id_to_uuid.sql  13_add_ref_list_column.sql
sql_to_prod/: 12_alter_user_id_to_uuid.sql  13_add_ref_list_column.sql  14_integrate_whatsapp_to_main_tables.sql
src/ansari/: __init__.py  _version.py  ansari_db.py  ansari_db_sql.py  ansari_logger.py  config.py  dependencies.py
tests/: ask-question-en.txt  batik-v1-en.csv  test_answer_quality.py  test_kalemet_tool.py  test_main_api.py  test_quran_decider.py
tests/integration/: README.md  test_ansari_generic.py  test_ansari_integration.py  test_claude_integration.py  test_helpers.py
tests/unit/: __init__.py  test_ansari_claude_document_limiting.py  test_ansari_claude_empty_text_block.py  test_ansari_claude_message_sequence.py  test_ansari_claude_model_version.py  test_ansari_claude_system_prompt.py  test_ansari_claude_tool_sequence.py  test_answer_quality.py  test_ayah_claude_endpoint.py  test_ayah_claude_fix.py  test_cache_control_logic.py  test_citation_formatting.py  test_convert_message_llm.py  test_logging_regression.py  test_main_api.py  test_mcp_async_fix.py  test_mcp_endpoint.py  test_message_id_in_thread.py  test_multilingual_citations.py  test_search_mawsuah.py  (+4 more)
tools/: kalemat.py  kalemat_api.py  search_hadith.py  search_mawsuah.py  search_quran.py  search_vectara.py
util/: prompt_mgr.py
(+90 files in other folders)
