[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansari-backend"
version = "0.1.0"
description = "Ansari is an AI assistant to enhance understanding and practice of Islam."
authors = [
    { name = "Ansari Project", email = "feedback@ansari.chat" }
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ansari-project/ansari-backend"
Documentation = "https://github.com/ansari-project/ansari-backend"
Source = "https://github.com/ansari-project/ansari-backend"
Tracker = "https://github.com/ansari-project/ansari-backend/issues"

[tool.ruff]
line-length = 127
indent-width = 4
target-version = "py310"
lint.select = ["E", "F"]
lint.fixable = ["ALL"]
lint.ignore = [
    "D100",   # ignore missing docs
    "E402",   # false positives for local imports
    "TRY003", # external messages in exceptions are too verbose
]
lint.mccabe.max-complexity = 10

[tool.ruff.format]    
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
    